--- a/index-pt.html
+++ b/index-pt.html
@@ -18,7 +18,7 @@
             <h4>Engenheiro de Software</h4>
         </div>
         <div class="idioma">
-            <a class="language" href="index-en.html"><button><img src="images/united-kingdom.svg" class="bandeira" alt=""></button></a>
+            <a class="language" href="index.html"><button><img src="images/united-kingdom.svg" class="bandeira" alt=""></button></a>
             <a class="language" href="index-pt.html"><button><img src="images/brazil.svg" class="bandeira" alt=""></button></a>
         </div>
     </header>
