--- a/index-pt.html
+++ b/index-pt.html
@@ -51,7 +51,7 @@
                     <div class="infoPerfil">
                         <h2 class="infoAndre">Nome: André Otávio Bordonal Artuzo</h2>
                         <h2 class="infoAndre">Data de Nascimento: 26-Sep-2001</h2>
-                        <h2 class="infoAndre">NaNacionalidad: Sales Oliveira - SP - Brasil</h2>
+                        <h2 class="infoAndre">Nacionalidade: Sales Oliveira - SP - Brasil</h2>
                         <a class="iconWhats" href="https://api.whatsapp.com/send?1=pt_BR&phone=5516982122502"><i class="iconWhats bi-whatsapp"><h2 class="infoAndre">+55 (16)98212-2502</h2></i></a>
                         <div class="media">
                             <a class="iconMedia" href="https://github.com/dequim1000"><i class="iconMedia bi-github"></i>
